--- a/sql-runner/WebContent/WEB-INF/web.xml
+++ b/sql-runner/WebContent/WEB-INF/web.xml
@@ -8,17 +8,17 @@
 		<param-name>log4j-config</param-name>
 		<param-value>WEB-INF/log4j.xml</param-value>
 	</context-param>
-<!-- 	<welcome-file-list> -->
-<!-- 		<welcome-file>ui?page=login</welcome-file> -->
-<!-- 	</welcome-file-list> -->
+	<!-- <welcome-file-list> -->
+	<!-- <welcome-file>ui?page=login</welcome-file> -->
+	<!-- </welcome-file-list> -->
 	<error-page>
 		<error-code>404</error-code>
 		<location>/appErrorHandler</location>
 	</error-page>
-	<error-page>
-		<exception-type>java.lang.Throwable</exception-type>
-		<location>/appErrorHandler</location>
-	</error-page>
+	<!-- <error-page> -->
+	<!-- <exception-type>java.lang.Throwable</exception-type> -->
+	<!-- <location>/appErrorHandler</location> -->
+	<!-- </error-page> -->
 	<resource-ref>
 		<description>NIIT database dataSource</description>
 		<res-ref-name>jdbc/niit</res-ref-name>
