--- a/sql-runner/resources/config.properties
+++ b/sql-runner/resources/config.properties
@@ -1,9 +1,9 @@
-db.environment=prod
-db.username=root
-db.password=root
 db.jdbcUrl=jdbc:mysql://localhost:3306/niit
+db.password=root
 app.user.maxAllowed=10
-app.user.db=/Users/srirammuthaiah/git/projects/sql-runner/user-info.txt
 app.sql.allowedPerUser=1
+app.config.file=/Users/srirammuthaiah/git/projects/sql-runner/resources/config.properties
 app.time.allowed.from=8:00
 app.time.allowed.to=16:30
+db.username=root
+app.user.db=/Users/srirammuthaiah/git/projects/sql-runner/user-info.txt
