Excel report functionality

--- a/sql-runner/resources/config.properties
+++ b/sql-runner/resources/config.properties
@@ -7,3 +7,4 @@ app.time.allowed.from=8:00
 app.time.allowed.to=16:30
 db.username=root
 app.user.db=/Users/srirammuthaiah/git/projects/sql-runner/user-info.txt
+tomcat.catalina.home=/opt/apache-tomcat-8.5.6
